--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <form>
         <div class="form-group">
             <label for="numRaces">Number of Races:</label>
-            <input type="text" id="numRaces" name="numRaces">
+            <input type="range" id="numRaces" name="numRaces" min="1" max="10" value="3">
+            <span id="numRacesValue">3</span>
         </div>
 
         <div class="form-group">
@@ -109,6 +110,9 @@
         }
         document.getElementById('tireWear').oninput = function() {
             document.getElementById('tireWearValue').textContent = this.value;
+        }
+        document.getElementById('numRaces').oninput = function() {
+            document.getElementById('numRacesValue').textContent = this.value;
         }
     </script>
 </body>
