race track and car query final

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,8 @@
     <span id="numRacesOutput">1</span><br>
 <div>
       <label for="race-format">Race Format:</label>
-     <button type="button" class="race-format" onclick="selectOption(this, 'race-format')">90km</button>
-    <button type="button" class="race-format" onclick="selectOption(this, 'race-format')">100km</button><br> 
+     <button type="button" class="race-format" onclick="selectOption(this, 'race-format')">90000</button>
+    <button type="button" class="race-format" onclick="selectOption(this, 'race-format')">180000</button><br> 
 </div>
 
 
