--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Race Configuration</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="frontend/styles.css">
 </head>
 <body>
 <form id="raceConfigForm">
@@ -70,6 +70,6 @@
     <input type="submit" value="Submit">
 </form>
 
-<script src="script.js"></script>
+<script src="frontend/script.js"></script>
 </body>
 </html>
