--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="frontend/styles.css">
 </head>
 <body>
+<div class="form-container">
 <form id="raceConfigForm">
     <label for="numRaces">Number of Races:</label>
     <input type="range" id="numRaces" name="numRaces" min="1" max="81" value="1" oninput="updateOutput(this.value, 'numRacesOutput')">
@@ -68,8 +69,11 @@
 
 
     <input type="submit" value="Submit">
+
+
 </form>
 
+</div>
 <script src="frontend/script.js"></script>
 </body>
 </html>
