--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,9 +66,8 @@
     <span id="tireWearOutput">1x</span><br> 
 </div>
 
-<div>
-      <label for="modCars">Allow Modified Cars:</label>
-    <input type="checkbox" id="modCars" name="modCars"><br>
+<div class="form-row">
+      <label for="modCars">Allow Modified Cars:<input type="checkbox" id="modCars" name="modCars"></label>
 </div>
 
 
