--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,7 +67,8 @@
 </div>
 
 <div class="form-row">
-      <label for="modCars">Allow Modified Cars:<input type="checkbox" id="modCars" name="modCars"></label>
+      <label for="modCars">Allow Modified Cars:</label>
+    <input type="checkbox" id="modCars" name="modCars">
 </div>
 
 
