--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,11 +45,11 @@
 
     <div>Tire Type:</div>
     <div>
-        <button type="button" class="tire-type" onclick="selectOption(this, 'tire-type')">Comfort</button>
-        <button type="button" class="tire-type" onclick="selectOption(this, 'tire-type')">Sport</button>
-        <button type="button" class="tire-type" onclick="selectOption(this, 'tire-type')">Racing</button>
-        <button type="button" class="tire-type" onclick="selectOption(this, 'tire-type')">Wet</button>
-        <button type="button" class="tire-type" onclick="selectOption(this, 'tire-type')">Dirt</button>
+        <button type="button" class="tire-type-comfort" onclick="selectOption(this, 'tire-type')" aria-label="comfort"></button>
+        <button type="button" class="tire-type-sport" onclick="selectOption(this, 'tire-type')" aria-label="sport"></button>
+        <button type="button" class="tire-type-racing" onclick="selectOption(this, 'tire-type')" aria-label="racing"></button>
+        <button type="button" class="tire-type-wet" onclick="selectOption(this, 'tire-type')" aria-label="wet"></button>
+        <button type="button" class="tire-type-dirt" onclick="selectOption(this, 'tire-type')" aria-label="dirt"></button>
     </div>
 
 
